Delete + ignore unneeded files from accumulate, acronym

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /accumulate/.nrepl-port
 /accumulate/project.clj
 /accumulate/target/
+/acronym/.exercism/
+/acronym/.nrepl-port
+/acronym/project.clj
+/acronym/target/
